# ponio-1

./: .gitignore  conanfile.py
database/: ETD2CF3.json  ETD3RK.json  ark324l2sa.json  ark436l2sa.json  ark548l2sa.json  backward_euler.json  bogacki_shampine.json  cox_matthews.json  crancknicolson.json  crancknicolson_2.json  dirk23.json  dirk23_crouzeix.json  dirk34.json  dirk_qin_zhang.json  esdirk_54a.json  esdirk_54b.json  euler.json  explicit_euler_sub4.json  fehlberg_rk_34.json  fehlberg_rk_45.json  heuneuler.json  imex_ars_111_lpum.json  imex_rk23SE.json  imex_rk23ssp.json  imex_rk33_Spi2.json  imex_rk33_Spi4.json  imex_rk33_lambda.json  imex_rk36_SE.json  imex_rk36_Spi2.json  imex_rk48_SE.json  imex_rk48_ssp.json  imex_ssp1_111_lpm.json  imex_ssp2_222_lm.json  imex_ssp2_222_pm.json  imex_ssp2_222_um.json  imex_ssp2_332_lpm1.json  imex_ssp2_332_lpm2.json  imex_ssp2_332_lpum.json  imex_ssp2_332_lspum.json  imex_ssp2_332_lum.json  (+56 more)
environment/: conda-environment-all.yml
html/: analysis.html  lorenz.js  ponio.html
ponio/: code_generator.py
ponio/examples/: CMakeLists.txt  arenstorf.cpp  belousov_zhabotinsky_2d_2eq_pirock.cpp  belousov_zhabotinsky_2d_3eq_pirock.cpp  duarte_eq1055.cpp  nagumo_pirock.cpp
ponio/notebooks/: arenstorf_adaptivetimestep.ipynb
ponio/template/: tpl_additive_runge_kutta.cpp.jinja2  tpl_butcher_methods.cpp.jinja2  tpl_doc_algorithms.rst  tpl_doc_ark.rst  tpl_doc_dirk.rst  tpl_doc_dp.rst  tpl_exponential_runge_kutta.cpp.jinja2  tpl_runge_kutta.cpp.jinja2
solver/: code_generator.py
solver/demos/: CMakeLists.txt  transport.cpp
(+52 files in other folders)
